<resources>
    <string name="app_name">AppIdatPatitas</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="val">Usuario</string>
    <string name="VALU">USUARIO</string>
    <string name="valC">PASSWORD</string>
    <string name="VS">INGRESAR</string>
    <string name="VALR">REGISTRAR</string>
    <string name="VSF">LOGIN</string>
</resources>